# omniforge

./: .gitignore  CLAUDE.md  Makefile  README.md  coding-guidelines.md  multi-agent-system.md  omniforge.db  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup_venv.sh  test_ppt_skill.py
benchmarks/: README.md  __init__.py  autonomous_execution_benchmarks.py
config/: CLAUDE.md  README.md  autonomous.yaml
docs/: CLAUDE.md  README-REASONING-ENGINE.md  README.md  REFACTORING-COMPLETED.md  REFACTORING-RECOMMENDATIONS.md  autonomous_agent_quickstart.md  class-dependencies-lld.md  dependency-graph-visual.md  event-streaming-visibility.md  groq-provider-setup.md  llm-architecture.md  observability.md  opik-tracing-guide.md  orchestration-usage-guide.md  reasoning-engine-architecture.md  reasoning-engine-quick-reference.md  reasoning-engine-visual-guide.md  skills-p0-fixes-completed.md  skills-system-fixes-needed.md  testing-conversational-builder.md  testing-phase-2.md
examples/: MULTI_AGENT_SKILLS_README.md  TESTING_GUIDE.md  autonomous_agent_examples.py  bash_tool_actions.py  chat.py  chat_client.py  chat_create_and_use_agent.py  context_loader_demo.py  create_linkedin_skill_automated.py  create_twitter_skill_automated.py  demo_flow.py  echo_agent.py  execution_context_demo.py  groq_example.py  interactive_agent_builder.py  master_agent_demo.py  multi_agent_skills_demo.py  openrouter_example.py  phase2_demo_complete.py  phase2_demo_orchestration.py  phase2_demo_public_skills.py  prompt_builder_demo.py  quick_start_agent.py  quick_test_multi_agent.py  reasoning_engine_example.py  scheduler_example.py  service_chat_client.py  simple_demo.py  simple_fibonacci_example.py  simple_skill_chat.py  simplified_agent_demo.py  skill_creation_assistant_demo.py  skill_generator_demo.py  skill_orchestrator_demo.py  skills_end_to_end_example.py  (+5 more)
(+773 files in other folders)
